[metadata]
name = celestine
version = 0.2.0
description = A simple image viewer.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = mem_dixy
author_email = celestine@mem-dixy.ch
# maintainer
# maintainer_email
url = https://github.com/mem-dixy/celestine
# download_url
packages = find:
# py_modules
# scripts
# ext_package
# ext_modules
classifiers =
    Development Status :: 2 - Pre-Alpha
#   Environment :: Console
#   Environment :: Console :: Curses
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)
    Natural Language :: English
#   Natural Language :: French
#   Natural Language :: German
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Multimedia :: Graphics :: Viewers
# distclass
# script_name
# script_args
# options
license = EUPL 1.2
license_files =
    LICENCE.txt
keywords =
    booru
    image viewer
platforms =
    Desktop
# cmdclass
package_dir = src
# include_package_data
# exclude_package_data
# package_data
zip_safe = True
# install_requires
# entry_points
# extras_require
python_requires = >=3.6
# namespace_packages
# test_suite
# tests_require
# test_loader
# eager_resources
project_urls =
    Bug Tracker = https://github.com/mem-dixy/celestine/issues
