[metadata]
name = celestine
version = 0.2.0
description = A simple image viewer.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = mem_dixy
author_email = celestine@mem-dixy.ch
url = https://github.com/mem-dixy/celestine
download_url = https://github.com/mem-dixy/celestine
packages = find:
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)
    Natural Language :: Bulgarian
    Natural Language :: Croatian
    Natural Language :: Czech
    Natural Language :: Danish
    Natural Language :: Dutch
    Natural Language :: English
    Natural Language :: Finnish
    Natural Language :: French
    Natural Language :: German
    Natural Language :: Greek
    Natural Language :: Hungarian
    Natural Language :: Irish
    Natural Language :: Italian
    Natural Language :: Latvian
    Natural Language :: Lithuanian
    Natural Language :: Polish
    Natural Language :: Portuguese
    Natural Language :: Romanian
    Natural Language :: Slovak
    Natural Language :: Slovenian
    Natural Language :: Spanish
    Natural Language :: Swedish
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Multimedia :: Graphics :: Viewers
license = EUPL 1.2
license_files = LICENCE.txt
keywords =
    booru
    image viewer
platforms =
    Desktop
package_dir = source
zip_safe = True
python_requires >= 3.67
project_urls =
    Bug Tracker = https://github.com/mem-dixy/celestine/issues

[options.extras_require]
dearpygui =
    dearpygui
windows =
    windows-curses
