[metadata]
name = celestine
version = 0.4.0
description = A simple image viewer.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = mem_dixy
author_email = celestine@mem-dixy.ch
url = https://github.com/mem-dixy/celestine
download_url = https://github.com/mem-dixy/celestine
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)
    Natural Language :: Bulgarian
    Natural Language :: Croatian
    Natural Language :: Czech
    Natural Language :: Danish
    Natural Language :: Dutch
    Natural Language :: English
    Natural Language :: Finnish
    Natural Language :: French
    Natural Language :: German
    Natural Language :: Greek
    Natural Language :: Hungarian
    Natural Language :: Irish
    Natural Language :: Italian
    Natural Language :: Latvian
    Natural Language :: Lithuanian
    Natural Language :: Polish
    Natural Language :: Portuguese
    Natural Language :: Romanian
    Natural Language :: Slovak
    Natural Language :: Slovenian
    Natural Language :: Spanish
    Natural Language :: Swedish
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Multimedia :: Graphics :: Viewers
    Typing :: Typed
license = EUPL 1.2
license_files = LICENCE.txt
keywords =
    python
    application
    wrapper
    framework
    localization
    cross-platform
    offline
    desktop
    celestine
    image-viewer
packages =
    celestine
platforms =
    Desktop
python_requires >= 3.10
project_urls =
    Bug Tracker = https://github.com/mem-dixy/celestine/issues


[options.extras_require]
distribution =
    build
    pip
    twine
documentation =
    Sphinx
extension =
    more-itertools >= 8.13.0
    Pillow >= 9.0.0
macOS =
    dearpygui
    pygame
validation =
    black
    coverage
    flake8
    isort
    mypy
    pycodestyle
    pylint
    pyright
Windows =
    dearpygui
    pygame
    windows-curses


[flake8]
max_line_length = 72

[mypy]
no_namespace_packages = True
show_column_numbers = True

[pycodestyle]
max_line_length = 72


[coverage:run]
omit =
    seaborn/widgets.py
    seaborn/external/*
    seaborn/colors/*
    seaborn/cm.py
    seaborn/conftest.py

[coverage:report]
exclude_lines =
    pragma: no cover
    if TYPE_CHECKING:
    raise NotImplementedError
